<resources>
    <string name="app_name">Gamified-Learning-App</string>
    <string name="Lornit">LORNIT</string>
    <string name="Email">Email:</string>
    <string name="AccountDetails">Account Details</string>
    <string name="usernameTitle">Username:</string>
    <string name="pointTitle">Score:</string>
    <string name="correctTasksTitle">Successful Tasks:</string>
    <string name="attemptedTitle">All Tasks:</string>
    <string name="emailTitle">Email:</string>
    <string name="descriptionTitle">Description:</string>
    <string name="SuccessRateTitle">Success Rate:</string>
    <string name="currencyTitle">Currency:</string>
    <string name="premiumCurrencyTitle">PCurrency:</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_newPassword">New Password</string>
    <string name="prompt_newPassword2">Re-Enter New Password</string>
    <string name="goBack">Go Back</string>
    <string name="prompt_oldPassword">Current Password</string>
    <string name="prompt_Username">Username</string>
    <string name="prompt_password2">Re-Enter Password</string>
    <string name="createAccount">Create Account</string>
    <string name="prompt_newEmail">New Email</string>
    <string name="updateEmail">Update Email</string>
</resources>
